2004-10-30  Pierre Chifflier  <pollux@cpe.fr>

	* feature: new commands SITE VARS, VARS_USER, VARS_GROUP
	* bugfix: use same names in vars_user get and set

2004-10-19  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: potential DoS (ident connections not closed correctly)

2004-10-01  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: site chacl broken
	* bugfix: segfault on idle timeout
	* bugfix: remove duplicate flags when changing user flags (closes: #0004)
	* bugfix: no more possible to change user_slots/leech_slots for non-gadmins
	* bugfix: unable to delete file after failed upload (closes: #0008)
	* bugfix: free space is taken from drive c: (closes: #0001, #0009)
	* bugfix: could not get free space when using backslashes (closes: #0010)
	* bugfix: user ip check fails if ip1 was deleted (closes: #0012)
	* bugfix: crash using link remove -r with bad arguments (closes: #0013)
	* bugfix: files with spaces corrupting .dirinfo (closes: #0014, #0015)
	* bugfix: permissions changes not displayed for vfs (closes: #0017)
	* feature: site chmod now accepts string version of permissions

2004-09-13  Pierre Chifflier  <pollux@cpe.fr>

	* feature: GnuTLS support
	* feature: KILLPATH, site, perl and tcl (kill all users inside given directory)
	* IMPORTANT: wzd.cfg and users files renamed to .sample

2004-09-08  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: wzdftpd broken on debian arm, ppc and s390 (Thanks to zentor)
	* bugfix: missing va_end when using va_start
	* bugfix: site grpadd and grpdel not working
	* bugfix: site change group without arg cause segfault
	* bugfix: site purge broken
	* bugfix: misc important problems in backend plaintext
	* bugfix: ip *@* not working

2004-08-31  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: segfault when deleting symlink with non-existent target
	* bugfix: uptime display broken
	* feature: added patch from Tobias Bengtsson to allow group members of
	gid=0 to get siteop access using PAM backend.