@@ -1,5 +1,5 @@
 
-SUBDIRS = ac-helpers m4 src libwzd backends modules tools init.d doc man
+SUBDIRS = ac-helpers m4 libwzd-base libwzd src backends modules tools init.d doc man
 
 bin_SCRIPTS = wzd-config
 
