@@ -248,6 +248,7 @@ AC_CONFIG_FILES([Makefile
 		 init.d/Makefile
                  init.d/wzdftpd
 		 libwzd/Makefile
+		 libwzd-base/Makefile
 		 m4/Makefile
 		 man/Makefile
                  modules/Makefile
