@@ -1,0 +1,12 @@
+
+noinst_LTLIBRARIES = libwzd_base.la
+
+noinst_HEADERS = \
+	list.h \
+	stack.h \
+	wzd_strlcat.h
+
+libwzd_base_la_SOURCES = \
+	list.c \
+	stack.c \
+	wzd_strlcat.c
