@@ -28,7 +28,9 @@
   * \brief Linked list implementation
   */
 
-#include "wzd_all.h"
+#ifdef HAVE_CONFIG_H
+# include "../config.h"
+#endif
 
 #include <stdlib.h>
 #include <string.h>
