@@ -1,3 +1,11 @@
+2004-11-08  Pierre Chifflier  <pollux@cpe.fr>
+
+	* feature: new library libwzd to help creating standalone applications
+	* feature: converted siteconfig, siteuptime and sitewho to use libwzd
+	* feature: removed shared memory, it was now useless
+	* feature: new convenience library libwzd-base (statically linked) to
+	avoid recoding same functions in different progs
+
 2004-10-30  Pierre Chifflier  <pollux@cpe.fr>
 
 	* feature: new commands SITE VARS, VARS_USER, VARS_GROUP
